fix: update some styling for better readability

--- a/src/styles/common/_code.scss
+++ b/src/styles/common/_code.scss
@@ -9,6 +9,10 @@ body {
     margin: 0.5rem 0 2rem 0;
   }
 
+  code {
+    font-family: $font-code;
+  }
+
   pre {
     padding: 1em;
     margin: 0.5rem 0 2rem 0;
