--- a/src/styles/common/_variables.scss
+++ b/src/styles/common/_variables.scss
@@ -4,7 +4,7 @@ $page-background-color: #f9f8f7;
 $text-color-black: #1d1d1b;
 $text-color-white: white;
 
-$content-max-width: 1280px;
+$content-max-width: 980px;
 $content-padding: 2rem;
 
 $font-size: 16px;
