--- a/src/styles/components/_post-card.scss
+++ b/src/styles/components/_post-card.scss
@@ -50,7 +50,6 @@
   .post-card-excerpt {
     margin-top: 1.4rem;
     line-height: 1.5;
-    font-family: $font-serif;
   }
 
   .post-card-meta {
