--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -40,7 +40,7 @@ section {
     padding-left: $content-padding;
     padding-right: $content-padding;
 
-    @include media('<=phone') {
+    @include media('<=tablet') {
       padding: 0;
       margin: 0;
     }
